--- a/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
@@ -29,3 +29,10 @@
 .animate-page-switch.ng-enter.ng-enter-active {
 	top:0;
 }
+
+.bg-box {
+	width: 100%; height: 100%;
+}
+.bg-image {
+	width: 100%; height: 100%;
+}
