--- a/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
@@ -1,4 +1,47 @@
 
+@import "mixin.scss";
+* {
+  outline: none !important;
+}
+
+/***********************************************
+* Navigation STYLE
+***********************************************/
+
+md-sidenav {
+  margin: 0;
+  max-width: 100% !important;
+  height: 100%;
+
+  ul li {
+    cursor: pointer;
+  }
+}
+
+.close {
+  min-width: 0;
+  width: 33px;
+
+  &::before, &::after {
+    position: absolute;
+    left: 15px;
+    top: 0;
+    content: ' ';
+    height: 33px;
+    width: 2px;
+    background-color: #333;
+  }
+  &::before {
+    transform: rotate(45deg);
+  }
+  &::after {
+    transform: rotate(-45deg);
+  }
+
+}
+
+
+
 /***********************************************
 * Carousel STYLE
 ***********************************************/
@@ -46,4 +89,85 @@
     margin: 0 40px;
   }
 
+}
+/***********************************************
+* Search STYLE
+***********************************************/
+#search-takeover {
+  .search-button {
+    outline: none !important;
+    border: 0;
+    background: transparent;
+  }
+
+  &.open {
+    .search-container.layout-fill {
+      right: 0%;
+    }
+    .search-button {
+      // position: absolute;
+      @include animation('spin 0.5s 1');
+      &::before {
+        content: '\e879' !important;
+      }
+    }
+  }
+
+  .search-button {
+    transition: 0.8s;
+    position: relative;
+    z-index: 12;
+    &:hover {
+      transform: scale(1.5);
+    }
+  }
+}
+
+.searchbar-container {
+  margin: 50px;
+  margin-top: 97px;
+  // width: 100%;
+  .search-bar {
+    position: relative;
+    // width: 100%;
+    input {
+      width: 100%;
+      outline: none;
+      border-radius: 0;
+      padding-right: 2em;
+      box-sizing: border-box;
+    }
+
+    .icon {
+      top: 0;
+      right: 0;
+      padding: 8px;
+      position: absolute;
+      cursor: pointer;
+      outline: none;
+    }
+
+    .search-results {
+    }
+  }
+}
+
+.search-container.layout-fill {
+  box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+  transition: 0.8s ease-in-out;
+  position: fixed;
+  top: 0;
+  right: -100%;
+  background: #fff;
+  z-index: 11;
+  overflow: auto;
+}
+
+@include keyframes(spin) {
+  0% {
+    transform: rotate(0deg) scale(1.5);
+  }
+  100% {
+    transform: rotate(-360deg) scale(1.5);
+  }
 }
