Added footer, updated carousel responsiveness, added overlay to search takeover

--- a/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
@@ -94,11 +94,6 @@ md-sidenav {
 * Search STYLE
 ***********************************************/
 #search-takeover {
-  .search-button {
-    outline: none !important;
-    border: 0;
-    background: transparent;
-  }
 
   &.open {
     .search-container.layout-fill {
@@ -111,15 +106,39 @@ md-sidenav {
         content: '\e879' !important;
       }
     }
+    .overlay {
+      @include transition(background-color 0.4s);
+      background-color: rgba(0,0,0,0.5);
+    }
   }
 
   .search-button {
-    transition: 0.8s;
+    @include transition(0.8s);
     position: relative;
     z-index: 12;
+    outline: none !important;
+    border: 0;
+    background: transparent;
     &:hover {
       transform: scale(1.5);
     }
+  }
+
+  .overlay {
+    @include transition(background-color 0.4s);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    // display: none;
+    pointer-events: none;
+    background-color: rgba(0,0,0,0);
+    z-index: 10;
+
+    // &.ng-enter-active {
+    //   background-color: rgba(0,0,0,0.5);
+    // }
   }
 }
 
@@ -154,7 +173,7 @@ md-sidenav {
 
 .search-container.layout-fill {
   box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
-  transition: 0.8s ease-in-out;
+  @include transition(0.4s cubic-bezier(.25,.8,.25,1));
   position: fixed;
   top: 0;
   right: -100%;
@@ -169,5 +188,28 @@ md-sidenav {
   }
   100% {
     transform: rotate(-360deg) scale(1.5);
+  }
+}
+
+/***********************************************
+* footer STYLE
+***********************************************/
+#footer {
+  background-color: #14A774;
+  &.open {
+    .footer-content{
+      top: 0;
+    }
+  }
+  .footer-nav {
+    z-index: 10;
+  }
+  .footer-content {
+      @include transition(0.4s cubic-bezier(.25,.8,.25,1));
+      position: fixed;
+      top: 100%;
+      height: 100%;
+      background-color: #14A774;
+      z-index: 10;
   }
 }
