--- a/wp-content/plugins/projectdoom/doom-app/assets/css/mixin.scss
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/mixin.scss
@@ -29,3 +29,11 @@
     -o-animation:      $animations;
     animation:         $animations;
 }
+
+@mixin transition($transition...) {
+  -webkit-transition: $transition;
+  -moz-transition: $transition;
+  -ms-transition: $transition;
+  -o-transition: $transition;
+  transition: $transition;
+}
