--- a/wp-content/plugins/projectdoom/doom-app/assets/css/general.mixin.scss
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/general.mixin.scss
@@ -37,3 +37,11 @@
   -o-transition: $transition;
   transition: $transition;
 }
+
+@mixin transform($transform...) {
+  -webkit-transform: $transform;
+  -moz-transform: $transform;
+  -ms-transform: $transform;
+  -o-transform: $transform;
+  transform: $transform;
+}
