--- a/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
@@ -1,3 +1,55 @@
+body {
+	overflow-x: hidden;
+	font-size: 100%;
+
+	-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
+	-webkit-text-size-adjust: 100%; 
+}
+
+body:after {
+	content: '';
+	display: block;
+	position: absolute;
+	top:0;
+	left: 0;
+	width: 100%;
+	height: 25px;
+	margin: 0 auto;
+	margin-right: 0;
+	
+	background-color: transparent;
+	background-image:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAWCAYAAAAILVbQAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAADBJREFUeNpiZGBgkGdAAyxA/JdowT+Uaf9HD5WMUIwq+P//f3QxBiYGLGCoCAIEGAAkbA0/MjEMiQAAAABJRU5ErkJggg==");
+	background-repeat:repeat-x;
+	background-position:top center;
+}
+
+::selection 	{
+	color: #14A774;
+	text-shadow: none;
+}
+
+/* Alignment */
+.fl, .columns.left { float:left !important; }
+.fr, .columns.right { float:right !important; }
+.fc, .center { margin: 0 auto !important; }
+
+.alignleft {
+	display: inline;
+	float: left;
+	margin-right: 1.625em;
+}
+.alignright {
+	display: inline;
+	float: right;
+	margin-left: 1.625em;
+}
+.aligncenter {
+	clear: both;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 /**
 * 
 * Styling for the ngProgress itself
@@ -10,8 +62,8 @@
     margin: 0;
     padding: 0;
     z-index: 99998;
-    background-color: green;
-    color: green;
+    background-color: #14A774 !important;
+    color: #14A774 !important;
     box-shadow: 0 0 10px 0; /* Inherits the font color */
     height: 2px;
     opacity: 0;
@@ -34,6 +86,134 @@
     z-index: 99999;
 }
 
+/*
+ * CUSTOM ACCORDION
+ */
+
+ .custom-accordion.panel-group,
+ .custom-accordion .panel-default {
+	 border-radius: 0;
+	 border:none;
+ }
+ 
+.custom-accordion .panel{
+	 background:none;
+ }
+ 
+.custom-accordion .panel-default > .panel-heading {
+	 background: none;
+	 border:none;
+	 border-radius: 0;
+	 border-bottom:1px solid #333;
+	 cursor: pointer;
+ }
+ 
+  .custom-accordion .panel-default > .panel-heading a:hover {
+	 text-decoration: none;
+	 color:#ff510b;
+ }
+ 
+  .custom-accordion .panel-default >.panel-heading + .panel-collapse > .panel-body {
+	 
+ }
+ .collapsible-item {
+	margin-bottom: 10px;
+	
+}
+
+.collapsible-item .title {
+	padding: 1.2em;
+	padding-left:0;
+	cursor: pointer;
+	text-transform: uppercase;
+	font-weight: bold;
+	position: relative;
+	display: block;
+	line-height: 1.1em;
+	font-family: 'FiraLight';
+	font-size: 1.2em;
+}
+
+.collapsible-item .title .icon {
+	float: right;
+	height: 20px;
+	width: 20px;
+	font-size: 19px !important;
+	padding-right: 1px;
+}
+
+.collapsible-item .title .iconleft {
+	float: left !important;
+}
+
+.collapsible-item .body {
+	position: relative;
+	top: -4px;
+	max-height: 0;
+	overflow: hidden;
+	z-index: -1;
+	-webkit-transition: max-height 0.1s ease;
+	transition: max-height 0.1s ease;
+	border-top:1px solid #ccc;
+}
+
+.collapsible-item .body .content {
+	padding: 20px 15px;
+	padding-left: 0;
+}
+
+.collapsible-item.open .body {
+	max-height: 100%;
+	z-index: 1;
+	
+}
+
+.collapsible-item.open .title {
+	
+}
+
+
+body,
+.collapsible-item .title,
+button, html, input, select, textarea {
+	font-family: 'Montserrat', sans-serif;
+}
+
+.hamburger-menu span{
+	position:relative;
+	height:2px;
+	display: block;
+	width:20px;
+	background-color:#444;
+	background-color:#ffffff;
+	margin-bottom:2px;
+}
+
+.md-autocomplete button {
+	background: #ffffff;
+}
+.page-about .hamburger-menu span,
+.page-legal .hamburger-menu span,
+.page-contact .hamburger-menu span,
+.super-search-open .hamburger-menu span,
+.super-menu-open .hamburger-menu span {
+	background-color:#ffffff;
+}
+
+.super-menu-open .hamburger-menu {
+	display: none;
+}
+.super-menu-open .close {
+	display: block;
+}
+
+.primary-navigation {}
+/**/
+.super-menu-open .primary-navigation ul li:first-child,
+.super-menu-open .primary-navigation ul li:last-child {
+	opacity: 0;
+}
+/**/
 
 .mobile-menu-list {
 	position:relative;
@@ -52,11 +232,291 @@
 @media (min-width: 600px) {
 	
 	.md-sidenav-left {
-		max-width:100% !impor
+		max-width:100% !important;
 		
+	}
+}
+
+.md-nav-bar {
+	border:none;
+}
+
+.super-menu,
+.super-menu ul li a {	
+	color:#ffffff;
+	font-weight:bold;
+	text-transform: uppercase;
+}
+
+.super-menu ul {
+	position: relative;
+	list-style: none;
+}
+
+.super-menu ul li {
+	position: relative;
+	padding: 20px 0;
+	border-bottom:1px solid #ffffff;
+}
+
+.super-menu ul li:last-child {
+	border-bottom:none;
+}
+
+.super-menu ul li a {
+	text-decoration: none;
+}
+
+.super-menu ul li ul {
+	position: relative;
+	margin: 0 auto;
+	padding-left:0;
+}
+
+.super-menu ul li ul li {
+	position: relative;
+	padding-left:20px;
+}
+
+.app-dashboard {
+	position: relative;
+	/**/
+	min-height: 100vh;
+	/**/
+}
+
+.page-404 .app-dashboard,
+.page-about .app-dashboard,
+.page-legal .app-dashboard,
+.page-contact .app-dashboard,
+.super-search-open .app-dashboard .search-container,
+.super-menu-open .app-dashboard .md-sidenav-left {
+	background-color:#14A774;
+}
+
+.page-404 .md-nav-bar .md-button._md-nav-button,
+.page-about .md-nav-bar .md-button._md-nav-button,
+.page-legal .md-nav-bar .md-button._md-nav-button,
+.page-contact .md-nav-bar .md-button._md-nav-button,
+.super-search-open .md-nav-bar .md-button._md-nav-button,
+.super-menu-open .md-nav-bar .md-button._md-nav-button,
+
+.super-menu-open #search-takeover .search-button,
+.super-search-open #search-takeover .search-button,
+.page-404 #search-takeover .search-button,
+.page-about #search-takeover .search-button,
+.page-legal #search-takeover .search-button,
+.page-contact #search-takeover .search-button {
+	color:#ffffff;
 }
 
 
+/**
+* 
+* Page Structure
+*
+* 
+*
+* 
+**/
+.page-content {
+	position: relative;
+	padding: 50px 0;
+}
+.page-404 .page-title,
+.page-about .page-title,
+.page-legal .page-title,
+.page-contact .page-title {
+	color:#ffffff;
+	font-size:50px;
+}
+
+
+.page-title {
+	font-size: 84px;
+    margin: 0;
+	line-height: 80px;
+	text-transform: uppercase;
+	color:#14A774;
+}
+
+.page-description {
+	font-size: 20px;
+    line-height: 28px;
+}
+
+.page-about .page-content-copy,
+.page-legal .page-content-copy,
+.page-contact .page-content-copy {
+	color:#ffffff;
+}
+
+.hr-divider {
+	position: relative;
+	display: block;
+	height: 5px;
+    width: 50%;
+    background-color: #14A774;
+    margin: 2em 0;
+}
+
+.product-image {
+	position: relative;
+	border:1px solid #ffffff;
+}
+
+.tag-group {
+	position: relative;
+	margin-top:3em;
+}
+
+.primary-tag {
+	border:1px solid #000000;
+	border-radius: 0;
+	padding: 0 15px;
+	text-transform: lowercase;
+}
+
+.carousel-title {
+	color:#14A774;
+	font-size: 30px;
+	text-transform: uppercase;
+}
+
+.product-insects,
+.insect-insects {
+	position: relative;
+	margin: 2em auto;
+	padding: 0;
+}
+
+.product-insects li {
+	position: relative;
+	border-radius: 50%;
+	width:50px;
+	height:50px;
+
+	margin-left: 10px;
+
+	border:2px solid #14A774;
+	display: inline-block;
+
+	color:#000000;
+}
+
+.product-insects li.active,
+.insect-insects li.active {
+	background-color:#14A774;
+	border:2px solid #14A774;
+	color:#ffffff;
+}
+
+.product-insects li:first-child,
+.insect-insects li:first-child {
+	margin-left:0;
+}
+
+.icon-insect-cockroach {
+
+}
+.icon-insect-fly {
+
+}
+.icon-insect-mosquito {
+
+}
+.icon-insect-ant {
+
+}
+.icon-insect-fishmoth {
+
+}
+.icon-insect-flea {
+
+}
+
+.primary-cta {
+	background-color: #ff510b;
+	border:1px solid #ff510b;
+	color:#ffffff;
+	border-radius: 0;
+	padding: 0 15px;
+	font-weight: bold;
+}
+
+.primary-cta:hover {
+	background-color: #ffffff;
+	color:#ff510b;
+}
+
+.page-products-single .primary-cta {
+	margin:2em 0;
+	margin-top:0;
+}
+
+
+.insect-insects li {
+	position: relative;
+	border-radius: 50%;
+	width:30px;
+	height:30px;
+
+	margin-left: 5px;
+
+	border:2px solid #ff510b;
+	display: inline-block;
+
+	color:#000000;
+}
+
+.insect-buttons-cta div {
+	border-left:1px solid #cccccc;
+	padding: 60px 0;
+	text-align: center;
+}
+
+.insect-buttons-cta div:last-child {
+	border-right:1px solid #cccccc;
+}
+
+.insect-buttons-cta div .md-button{
+	font-weight: bold;
+	color:#ff510b;
+	font-size: 20px;
+	text-transform: uppercase;
+	border:none;
+}
+
+.insect-buttons-cta div .md-button .icon {
+	position: relative;
+	display:block;
+	width:80px;
+	height:80px;
+	border:5px solid #444444;
+	border-radius:50%;
+	margin: 2em auto;
+}
+
+.insect-controller-buttons {
+	position: absolute;
+	display: block;
+	width:100%;
+	left:0;
+	z-index: 999999;
+}
+
+.insect-controller-buttons .lnr-chevron-left,
+.insect-controller-buttons .lnr-chevron-right {
+	position: absolute;
+	font-size: 2em;
+} 
+
+.insect-controller-buttons .lnr-chevron-left {
+	left:0;
+}
+.insect-controller-buttons .lnr-chevron-right {
+	right:0;
+}
 /**
 * 
 * Page Transitions Animations
@@ -77,7 +537,7 @@
 }
 
 .animate-page-switch {
-	padding:10px;
+	padding:20px;
 }
 
 .animate-page-switch.ng-animate {
@@ -116,11 +576,17 @@
 }
 
 .btn-filter {
-	border-radius: 999px;
+	border-radius: 0;
+}
+
+.active-filter.btn-filter  {
+	color:#ffffff;
+	background-color:#14A774;
 }
 
 .gallery-card {
 	padding: 2em;
+	box-shadow: none;
 }
 
 md-card md-card-content {
@@ -149,3 +615,33 @@ md-card md-card-content {
 .bg-image {
 	width: 100%; height: 100%;
 }
+
+
+/* ==|== non-semantic helper classes ========================================
+   Please define your styles before this section.
+   ========================================================================== */
+
+/* prevent callout */
+.nocallout {-webkit-touch-callout: none;}
+
+/* A hack for HTML5 contenteditable attribute on mobile */
+textarea[contenteditable] {-webkit-appearance: none;}
+
+/* A workaround for S60 3.x and 5.0 devices which do not animated gif images if they have been set as display: none */
+.gifhidden {position: absolute; left: -100%;}
+
+/* For image replacement */
+.ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; }
+.ir br { display: none; }
+
+/* Hide from both screenreaders and browsers: h5bp.com/u */
+.hidden, [ng-cloak] { display: none !important; visibility: hidden; }
+
+/* Hide only visually, but have it available for screenreaders: h5bp.com/v */
+.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
+
+/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: h5bp.com/p */
+.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
+
+/* Hide visually and from screenreaders, but maintain layout */
+.invisible { visibility: hidden; }
