--- a/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
@@ -286,14 +286,17 @@ button, html, input, select, textarea {
 }
 
 .page-404 .app-dashboard,
-.page-about .app-dashboard,
+/* .page-about .app-dashboard,
 .page-legal .app-dashboard,
 .page-contact .app-dashboard,
+.page-faq .app-dashboard, */
 .super-search-open .app-dashboard .search-container,
 .super-menu-open .app-dashboard .md-sidenav-left {
 	background-color:#14A774;
 }
 
+
+.page-faq .app-dashboard,
 .page-404 .md-nav-bar .md-button._md-nav-button,
 .page-about .md-nav-bar .md-button._md-nav-button,
 .page-legal .md-nav-bar .md-button._md-nav-button,
@@ -552,7 +555,7 @@ button, html, input, select, textarea {
 
 .animate-page-switch.ng-leave.ng-leave-active,
 .animate-page-switch.ng-enter {
-	top:-50px;
+	top:100%;
 }
 .animate-page-switch.ng-leave,
 .animate-page-switch.ng-enter.ng-enter-active {
