--- a/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
@@ -37,7 +37,7 @@ md-sidenav {
     content: ' ';
     height: 33px;
     width: 2px;
-    background-color: #333;
+    background-color: #fff;
   }
   &::before {
     transform: rotate(45deg);
@@ -261,11 +261,14 @@ md-sidenav {
   }
   .footer-nav {
     z-index: 11;
-    // position: fixed;
+    position: relative;
     bottom: 0;
     left: 0;
     width: 100%;
     background-color: #14A774;
+  }
+  .footer-nav .md-button {
+      color:#ffffff; 
   }
   .footer-content {
       @include transition(0.4s cubic-bezier(.25,.8,.25,1));
@@ -277,6 +280,7 @@ md-sidenav {
       overflow: auto;
       padding-bottom: 150px;
   }
+  
 }
 
 /***********************************************
@@ -416,7 +420,7 @@ md-sidenav {
           border-color: transparent;
         }
       }
-    }
+    }  
   }
   .step-1 {
     height: 420px;
@@ -436,6 +440,7 @@ md-sidenav {
     &.active {
       border-color: transparent;
       padding: 40px 10%;
+      padding:0;
       width: 100%;
       margin: 0;
     }
