--- a/wp-content/plugins/projectdoom/doom-app/assets/css/custom.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/custom.css
@@ -589,8 +589,8 @@ md-autocomplete-wrap input {
 #configurator .step-1 .revert .number, #configurator .step-2 .revert .number, #configurator .step-3 .revert .number {
   border: 3px solid #000;
   display: block;
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
   border-radius: 100%;
   font-size: 47px;
   margin: 0 auto 15px;
@@ -643,8 +643,12 @@ md-autocomplete-wrap input {
   border: 5px solid #14A774;
 }
 
+#configurator .insect-selector.selected.desc {
+  opacity: 1;
+}
+
 #configurator .insect-selector .desc {
-  display: block;
+  opacity: 0;
   height: 150px;
 }
 
@@ -652,7 +656,7 @@ md-autocomplete-wrap input {
   width: 1.5em;
   height: 1.5em;
   display: inline-block;
-  font-size: 1em;
+  font-size: 3em;
   border: 0.1em solid inherit;
   border-radius: 100%;
   padding: 0.2em 0;
@@ -688,7 +692,7 @@ md-autocomplete-wrap input {
 
 #configurator .step-1.active {
   border-color: transparent;
-  padding: 40px 10%;
+  padding: 0;
   width: 100%;
   margin: 0;
 }
