--- a/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
@@ -12,10 +12,27 @@ $orange: #FF510B;
 * {
   outline: none !important;
   box-shadow: none !important;
+  // z-index: 0 !important;
 }
 
 .inline {
   display: inline-block !important;
+}
+
+md-toolbar {
+  z-index: 0 !important;
+}
+
+.md-track-container {
+  top: 24px;
+  height: 1px;
+  .md-track {
+    background-color: rgba(#000, 0.5);
+  }
+
+  .md-track-fill {
+    background-color: $green;
+  }
 }
 
 /***********************************************
@@ -32,6 +49,9 @@ $orange: #FF510B;
 /***********************************************
 * Navigation STYLE
 ***********************************************/
+div[data-ui-navigation] {
+  z-index: 9;
+}
 //override body height when takeover open
 .super-menu-open {
   // height: 100%;
@@ -41,7 +61,7 @@ $orange: #FF510B;
 }
 
 .super-menu {
-  z-index: 1000;
+  z-index: 10;
 }
 //green pages open
 .super-menu-open,
@@ -109,17 +129,20 @@ md-sidenav {
     content: initial !important;
   }
 }
-
+.no-border {
+  .carousel-control {
+    border-color: transparent
+  }
+}
 .carousel-container {
   position: relative;
   // overflow: hidden;
   .controls {
-    z-index: 10;
     font-size: 20px;
     &:hover .carousel-control {
       opacity: 1;
     }
-
+    
     .carousel-control {
       position: absolute;
       top: calc(50% - 0.5em - 5px);
@@ -183,7 +206,7 @@ md-sidenav {
         max-height: 150px;
         max-width: 100%;
         position: relative;
-        z-index: 1;
+        // z-index: 1;
       }
     }
     .carousel-item-name, .cta {
@@ -228,6 +251,7 @@ md-sidenav {
  
 
 #search-takeover {
+  color: #fff;
   &.open {
     .search-container.layout-fill {
       right: 0%;
@@ -251,7 +275,7 @@ md-sidenav {
   .search-button {
     @include transition(0.8s);
     position: relative;
-    z-index: 12;
+    z-index: 10;
     outline: none !important;
     border: 0;
     background: transparent;
@@ -270,7 +294,7 @@ md-sidenav {
     // display: none;
     pointer-events: none;
     background-color: rgba(0,0,0,0);
-    z-index: 10;
+    z-index: 7;
 
     // &.ng-enter-active {
     //   background-color: rgba(0,0,0,0.5);
@@ -317,7 +341,7 @@ md-sidenav {
   top: 0;
   right: -100%;
   background: #fff;
-  z-index: 11;
+  z-index: 9;
   overflow: auto;
 }
 
@@ -334,20 +358,21 @@ md-sidenav {
 * footer STYLE
 ***********************************************/
 #footer {
+  color :#fff;
   &.open {
     .footer-content{
       top: 0px;
     }
   }
   .footer-nav {
-    z-index: 11;
+    color: #fff;
+    // z-index: 1;
     // position: fixed;    
     position: absolute;
     // top: 100%;
     width: 100%;
     bottom: 0;
     left: 0;
-    width: 100%;
     background-color: $green;
   }
   .md-nav-bar {
@@ -391,7 +416,24 @@ md-sidenav {
 /***********************************************
 * configurator STYLE
 ***********************************************/
-#configurator {
+/*****
+
+slider style
+
+*****/
+div[data-ui-configurator] {
+  md-slider .md-thumb {
+    display: none;
+    font-family: 'doom-icons';
+
+    &[pest="ant"] {
+      &::before {
+        content: "\e900";
+      }
+    }
+  }
+}
+#configurator { 
   width: 100%;
 
   .md-sign {
