--- a/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
@@ -124,6 +124,11 @@ md-sidenav {
 /***********************************************
 * Carousel STYLE
 ***********************************************/
+div[data-ui-carousel] {
+	position: relative;
+  max-width: calc(100% - 30px);
+  margin-left: 16px;
+}
 .retailer-carousel {
   .item .bg-box::before{
     content: initial !important;
@@ -131,7 +136,7 @@ md-sidenav {
 }
 .no-border {
   .carousel-control {
-    border-color: transparent
+    border-color: transparent !important;
   }
 }
 .carousel-container {
@@ -421,16 +426,58 @@ md-sidenav {
 slider style
 
 *****/
-div[data-ui-configurator] {
+div[data-ui-configurator] .configurator-steps {
   md-slider .md-thumb {
-    display: none;
+    // display: none;
     font-family: 'doom-icons';
+  }
+}
 
-    &[pest="ant"] {
-      &::before {
-        content: "\e900";
-      }
-    }
+div[data-ui-configurator][pest='ant'] .configurator-steps {
+  .md-thumb::after {
+    content: "\e900";
+    top: -4px;
+  }
+}
+div[data-ui-configurator][pest='fishmoth'] .configurator-steps {
+  .md-thumb::after {
+    content: "\e902";
+    top: 0px;
+    font-size: 55px;
+  }
+}
+div[data-ui-configurator][pest='cockroach'] .configurator-steps {
+  .md-thumb::after {
+    content: "\e901";
+    top: -7px;
+  }
+}
+div[data-ui-configurator][pest='fly'] .configurator-steps {
+  .md-thumb::after {
+    content: "\e904";
+    top: -12px;
+  }
+}
+div[data-ui-configurator][pest='mosquito'] .configurator-steps {
+  .md-thumb::after {
+    content: "\e905";
+    top: -8px;
+  }
+}
+div[data-ui-configurator][pest='flea'] .configurator-steps {
+  .md-thumb::after {
+    content: "\e903";
+    top: -3px;
+  }
+}
+.configurator-steps {
+  .md-thumb::after {
+    content: "\e900";
+    font-size: 45px;
+    transform: rotate(90deg);
+    top: -4px;
+    color: $green;
+    border: none;
   }
 }
 #configurator { 
@@ -541,11 +588,12 @@ div[data-ui-configurator] {
     border: 5px solid transparent;
     &.selected {
       border: 5px solid $green; 
-      &.desc {
+      .desc {
         opacity:1;
       }
     }
     .desc {
+      @include  transition(0.4s cubic-bezier(.25,.8,.25,1));
       opacity:0;
       height: 150px;
     }
@@ -601,9 +649,15 @@ div[data-ui-configurator] {
     .content:hover {
       .insect-selector {
         border-color: transparent;
-
+        .desc {
+          opacity: 0;
+        }
         &:hover {
           border-color: $green;
+
+          .desc {
+            opacity: 1;
+          }
         }
       }
     }
